Replace mat spinner with custom spinner

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,7 +1,7 @@
 <div class="loading-spinner">
-    <mat-spinner *ngIf="!feed"
+    <app-xunk-spinner *ngIf="!feed"
                 mode="indeterminate">
-    </mat-spinner>
+    </app-xunk-spinner>
 </div>
 
 <div *ngIf="feed" class="detail-card">
