--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -1,7 +1,7 @@
 <div class="loading-spinner">
-    <mat-spinner *ngIf="!event"
+    <app-xunk-spinner *ngIf="!event"
                 mode="indeterminate">
-    </mat-spinner>
+    </app-xunk-spinner>
 </div>
 
 <div id="main" class="mat-elevation-z3" *ngIf="event">
