--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -1,7 +1,7 @@
 <div class="loading-spinner">
-    <mat-spinner *ngIf="!body"
+    <app-xunk-spinner *ngIf="!body"
                 mode="indeterminate">
-    </mat-spinner>
+    </app-xunk-spinner>
 </div>
 
 <div class="full-container">
