--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,7 +1,7 @@
 <div class="loading-spinner">
-    <mat-spinner *ngIf="!events"
+    <app-xunk-spinner *ngIf="!events"
                   mode="indeterminate">
-    </mat-spinner>
+    </app-xunk-spinner>
 </div>
 
 <app-event-sidebar-desktop
