--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -1,7 +1,7 @@
 <div class="loading-spinner">
-    <mat-spinner *ngIf="!profile"
+    <app-xunk-spinner *ngIf="!profile"
                 mode="indeterminate">
-    </mat-spinner>
+    </app-xunk-spinner>
 </div>
 
 <div class="detail-card mat-elevation-z3" *ngIf="profile">
