--- a/src/app/xunk-spinner/xunk-spinner.component.css
+++ b/src/app/xunk-spinner/xunk-spinner.component.css
@@ -7,7 +7,7 @@
 }
 
 .spinner > div {
-    background-color: #fff;
+    background-color: #FF5722;
     height: 100%;
     width: 6px;
     display: inline-block;
