--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -8,13 +8,13 @@
     *ngIf="events"
     [event]="selectedEvent">
 
-    <div class="events-list mat-elevation-z3">
+    <div class="events-list">
         <mat-card class="head-card" (click)=OpenEvent(events[0])>
             <img mat-card-image [src]="events[0].image_url" alt="">
             <div> {{ events[0].name }} </div>
             <span class="subhead">{{ dataService.GetDate(events[0].start_time) }} | {{ events[0].venues_str }}</span>
         </mat-card>
-    
+
         <app-event-card *ngFor="let event of events.slice(1, events.length)"
                         (click)=OpenEvent(event)
                         [event]="event"
