--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,52 @@
-<ng-container *ngIf="initialized">
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav
+        #drawer
+        class="sidenav"
+        fixedInViewport="true"
+        [mode]="(mobileQuery.matches) ? 'over' : 'side'"
+        [opened]="!mobileQuery.matches">
+        <mat-nav-list>
+            <app-navmenu></app-navmenu>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <mat-toolbar class="example-toolbar" color="primary">
+            <button mat-icon-button
+                    (click)="drawer.toggle()"
+                    [style.display]="getState(o)==='base' || !mobileQuery.matches ? 'inline' : 'none'">
+                <mat-icon>menu</mat-icon>
+            </button>
+            <button mat-icon-button
+                    [style.display]="getState(o)==='overlay' && mobileQuery.matches ? 'inline' : 'none'"
+                    (click)="dataService.navigateBack();">
+                <mat-icon>arrow_back</mat-icon>
+            </button>
+
+            <h1 class="example-app-name">
+                {{ this.titleService.getTitle() }}
+            </h1>
+
+            <div class="fill-space"></div>
+            <button mat-button
+                    (click)="login()"
+                    *ngIf="!this.dataService.loggedIn">
+                Log In
+            </button>
+
+            <button mat-button
+                    (click)="this.dataService.Logout()"
+                    *ngIf="this.dataService.loggedIn">
+                Log Out
+            </button>
+        </mat-toolbar>
+        <div id="outlet"></div>
+        <div id="top-gap"></div>
+        <router-outlet #o="outlet"></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
+
+
+<!--<ng-container *ngIf="initialized">
 <sidebar-js [sidebarjsConfig]="{nativeSwipeOpen: false}">
     <mat-nav-list>
         <app-navmenu sidebarjsClose></app-navmenu>
@@ -42,3 +90,4 @@
 </div>
 
 </ng-container>
+-->
