--- a/src/app/event-sidebar-desktop/event-sidebar-desktop.component.css
+++ b/src/app/event-sidebar-desktop/event-sidebar-desktop.component.css
@@ -6,15 +6,9 @@
     }
 }
 
-@media (min-width: 900px) {
-    .events-list {
-        width: 400px;
-    }
-}
-
 @media (min-width: 768px) {
     .events-list {
-        position: absolute;
+        position: relative;
         left: calc(47% - 400px);
         max-width: 400px;
         margin: 10px;
@@ -22,17 +16,17 @@
 
     .event-details-container {
         position: fixed;
-        left: 53%;
+        left: calc(55% + 100px);
         max-height: calc(100% - 100px);
         top: 80px;
-        width:400px;
+        width: 400px;
         overflow: auto;
         overflow-x: hidden;
         background-color: white;
     }
 }
 
-@media (min-width: 768px) and (max-width: 900px) {
+@media (min-width: 768px) and (max-width: 960px) {
     .events-list {
         width: 360px;
         left: calc(48% - 360px);
@@ -40,6 +34,18 @@
 
     .event-details-container {
         width:360px;
-        left: 52%;
+        left: calc(52%);
+    }
+}
+
+@media (min-width: 961px) and (max-width: 1200px) {
+    .events-list {
+        width: 321px;
+        left: calc(48% - 320px);
+    }
+
+    .event-details-container {
+        width:320px;
+        left: calc(52% + 150px);
     }
 }
