--- a/src/app/navmenu/navmenu.component.css
+++ b/src/app/navmenu/navmenu.component.css
@@ -6,6 +6,10 @@
     cursor: pointer;
 }
 
+.active-link {
+    background-color: #f5f5f5;
+}
+
 .profile-pic {
     width: 40px;
     height: 40px;
