Add space to bottom of outlet for shadows

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,6 +8,10 @@
     height: 70px;
 }
 
+#bottom-gap {
+    height: 6px;
+}
+
 @media (max-width: 960px) {
     .example-toolbar {
         width: 100%;
