--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,6 +55,7 @@
         <div id="outlet"></div>
         <div id="top-gap"></div>
         <router-outlet #o="outlet"></router-outlet>
+        <div id="bottom-gap"></div>
     </mat-sidenav-content>
 </mat-sidenav-container>
 
