Off center (to restore screen center) blog and news feeds

--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -1,9 +1,11 @@
-.detail-card {
-    background-color: transparent;
-}
-
 .feed-card {
     margin-bottom: 8px;
     cursor: pointer;
     overflow: auto;
+}
+
+@media (min-width: 1256px) {
+    .feed-card {
+        transform: translateX(-150px);
+    }
 }
