--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -3,3 +3,9 @@
     cursor: pointer;
     overflow: hidden;
 }
+
+@media (min-width: 1256px) {
+    .feed-card {
+        transform: translateX(-150px);
+    }
+}
