Add spinner to my-events

--- a/src/app/my-events/my-events.component.html
+++ b/src/app/my-events/my-events.component.html
@@ -1,3 +1,7 @@
+<div class="loading-spinner">
+    <app-xunk-spinner *ngIf="!roles"></app-xunk-spinner>
+</div>
+
 <div class="detail-card mat-elevation-z3" *ngIf="roles && dataService.loggedIn">
   <mat-tab-group class="tab-group" mat-stretch-tabs [(selectedIndex)]="selIndex">
       <mat-tab label="Following">
