--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,7 +1,5 @@
 <div class="loading-spinner">
-    <app-xunk-spinner *ngIf="!events"
-                mode="indeterminate">
-    </app-xunk-spinner>
+    <app-xunk-spinner *ngIf="!events"></app-xunk-spinner>
 </div>
 
 <app-event-sidebar-desktop
