--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,7 +1,5 @@
 <div class="loading-spinner">
-    <app-xunk-spinner *ngIf="!feed"
-                mode="indeterminate">
-    </app-xunk-spinner>
+    <app-xunk-spinner *ngIf="!feed"></app-xunk-spinner>
 </div>
 
 <ng-container *ngIf="feed">
