--- a/src/app/update-body/update-body.component.html
+++ b/src/app/update-body/update-body.component.html
@@ -1,7 +1,5 @@
 <div class="loading-spinner">
-  <app-xunk-spinner *ngIf="!body"
-              mode="indeterminate">
-  </app-xunk-spinner>
+  <app-xunk-spinner *ngIf="!body"></app-xunk-spinner>
 </div>
 
 <div id="main" class="mat-elevation-z3" *ngIf="body">
