--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,7 +1,5 @@
 <div class="loading-spinner">
-    <app-xunk-spinner *ngIf="!event"
-                mode="indeterminate">
-    </app-xunk-spinner>
+    <app-xunk-spinner *ngIf="!event"></app-xunk-spinner>
 </div>
 
 <div class="full-container">
