Center everything with real-center

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -2,7 +2,7 @@
     <app-xunk-spinner *ngIf="!event"></app-xunk-spinner>
 </div>
 
-<div class="full-container">
+<div class="full-container real-center">
   <div *ngIf="event" class="detail-card mat-elevation-z3">
     <div class="theme-header primary-background-color">
       <img class="event-image"
