--- a/src/app/update-body/update-body.component.html
+++ b/src/app/update-body/update-body.component.html
@@ -2,7 +2,7 @@
   <app-xunk-spinner *ngIf="!body"></app-xunk-spinner>
 </div>
 
-<div id="main" class="mat-elevation-z3" *ngIf="body">
+<div id="main" class="real-center mat-elevation-z3" *ngIf="body">
 
 <div class="theme-header">
   <input style="display:none;" type="file" accept="image/*" #file id="file" (change)="uploadImage($event.target.files)">
