--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -2,7 +2,7 @@
     <app-xunk-spinner *ngIf="!profile"></app-xunk-spinner>
 </div>
 
-<div class="detail-card mat-elevation-z3" *ngIf="profile">
+<div class="detail-card real-center mat-elevation-z3" *ngIf="profile">
   <!-- Head information -->
   <div id="head">
     <img [src]="profile.profile_pic"
