--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -2,7 +2,7 @@
     <app-xunk-spinner *ngIf="!event"></app-xunk-spinner>
 </div>
 
-<div id="main" class="mat-elevation-z3" *ngIf="event">
+<div id="main" class="real-center mat-elevation-z3" *ngIf="event">
 
 <div class="theme-header">
   <input style="display:none;" type="file" accept="image/*" #file id="file" (change)="uploadImage($event.target.files)">
