--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -2,7 +2,7 @@
     <app-xunk-spinner *ngIf="!body"></app-xunk-spinner>
 </div>
 
-<div class="full-container">
+<div class="full-container real-center">
   <div *ngIf="body" class="detail-card mat-elevation-z3">
     <div class="theme-header primary-background-color">
       <img class="body-image"
