Fix login layout

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login-container" *ngIf="!authenticating">
+<div class="login-container detail-card-elem real-center" *ngIf="!authenticating">
   <img src="assets/logo.png" class="login-button">
   <button mat-raised-button
           (click)='login()'
