--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,13 +1,16 @@
 .login-button {
-    width: 80vw;
+    width: 100%;
     max-width: 300px;
     margin-top: 10px;
 }
 
 .login-container {
-    position: absolute;
+    background-color: whitesmoke;
+    padding: 20px;
+    padding-top: 5px;
+    border-radius: 40px;
+    margin-top: 30px;
     max-width: 300px;
     left: 50%;
     width: auto;
-    transform: translateX(-50%);
 }
