--- a/src/app/event-sidebar-desktop/event-sidebar-desktop.component.html
+++ b/src/app/event-sidebar-desktop/event-sidebar-desktop.component.html
@@ -8,6 +8,7 @@
      [@enterRight]="bstr(animedEventDetails)">
     <app-event-details
       [eventId]="eventDetailsId"
-      (load)="eventDeatilsLoaded($event)">
+      (load)="eventDeatilsLoaded($event)"
+      noCenter="true">
     </app-event-details>
 </div>
