--- a/src/app/my-events/my-events.component.html
+++ b/src/app/my-events/my-events.component.html
@@ -1,5 +1,5 @@
 <div class="loading-spinner">
-    <app-xunk-spinner *ngIf="!roles"></app-xunk-spinner>
+    <app-xunk-spinner *ngIf="!roles && dataService.loggedIn"></app-xunk-spinner>
 </div>
 
 <div class="detail-card real-center mat-elevation-z3" *ngIf="roles && dataService.loggedIn">
