--- a/src/app/xunk-spinner/xunk-spinner.component.css
+++ b/src/app/xunk-spinner/xunk-spinner.component.css
@@ -1,40 +1,42 @@
 .spinner {
     margin: 100px auto;
-    width: 50px;
-    height: 60px;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
     text-align: center;
     font-size: 10px;
+    padding: 20px;
+    background-color: white;
 }
 
 .spinner > div {
-    background-color: #FF5722;
+    background-color: #3498db;
     height: 100%;
     width: 6px;
     display: inline-block;
     margin-right: 2px;
+    border-radius: 7px;
 
     -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
     animation: sk-stretchdelay 1.2s infinite ease-in-out;
 }
 
 .spinner .rect2 {
+    background-color: #c0392b;
     -webkit-animation-delay: -1.1s;
     animation-delay: -1.1s;
 }
 
 .spinner .rect3 {
+    background-color: #f1c40f;
     -webkit-animation-delay: -1.0s;
     animation-delay: -1.0s;
 }
 
 .spinner .rect4 {
+    background-color: #27ae60;
     -webkit-animation-delay: -0.9s;
     animation-delay: -0.9s;
-  }
-
-.spinner .rect5 {
-    -webkit-animation-delay: -0.8s;
-    animation-delay: -0.8s;
 }
 
 @-webkit-keyframes sk-stretchdelay {
