Fix lazy loading with fullscreen sidenav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,10 +53,9 @@
             </button>
         </mat-toolbar>
 
-        <div id="router-out">
+        <div id="router-out" (scroll)="onScroll($event)">
             <router-outlet #o="outlet"></router-outlet>
         </div>
-
     </mat-sidenav-content>
 </mat-sidenav-container>
 
