--- a/src/app/xunk-spinner/xunk-spinner.component.css
+++ b/src/app/xunk-spinner/xunk-spinner.component.css
@@ -1,8 +1,8 @@
 .spinner {
-    margin: 100px auto;
-    width: 70px;
-    height: 70px;
+    height:50px;
+    width:50px;
     border-radius: 50%;
+
     text-align: center;
     font-size: 10px;
     padding: 20px;
@@ -10,46 +10,49 @@
 }
 
 .spinner > div {
-    background-color: #3498db;
+    background-color: #673AB7;
     height: 100%;
+    transform: scale(1, 0.5);
+
     width: 6px;
     display: inline-block;
     margin-right: 2px;
-    border-radius: 7px;
 
-    -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
-    animation: sk-stretchdelay 1.2s infinite ease-in-out;
+    -webkit-animation: spinner 1s infinite ease-in-out;
+    animation: spinner 1    s infinite ease-in-out;
 }
 
 .spinner .rect2 {
-    background-color: #c0392b;
-    -webkit-animation-delay: -1.1s;
-    animation-delay: -1.1s;
+    -webkit-animation-delay: 0.09s;
+    animation-delay: 0.09s;
 }
 
 .spinner .rect3 {
-    background-color: #f1c40f;
-    -webkit-animation-delay: -1.0s;
-    animation-delay: -1.0s;
+    -webkit-animation-delay: 0.18s;
+    animation-delay: 0.18s;
 }
 
 .spinner .rect4 {
-    background-color: #27ae60;
-    -webkit-animation-delay: -0.9s;
-    animation-delay: -0.9s;
+    -webkit-animation-delay: 0.27s;
+    animation-delay: 0.27s;
 }
 
-@-webkit-keyframes sk-stretchdelay {
-    0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
-    20% { -webkit-transform: scaleY(1.0) }
+.spinner .rect5 {
+    -webkit-animation-delay: 0.27s;
+    animation-delay: 0.36s;
 }
 
-@keyframes sk-stretchdelay {
-    0%, 40%, 100% {
-      transform: scaleY(0.4);
-      -webkit-transform: scaleY(0.4);
-    }  20% {
-      transform: scaleY(1.0);
-      -webkit-transform: scaleY(1.0);
+@keyframes spinner {
+    0% {
+      transform: scale(1, 0.5);
+    }
+    20% {
+      transform: scale(1, 1.1);
+    }
+    40% {
+      transform: scale(1, 0.5);
+    }
+    100% {
+        transform: scale(1, 0.5);
     }
 }
