--- a/src/app/xunk-spinner/xunk-spinner.component.html
+++ b/src/app/xunk-spinner/xunk-spinner.component.html
@@ -1,8 +1,9 @@
 <div class="loading-spinner">
-  <div class="spinner">
+  <div class="spinner mat-elevation-z2">
     <div class="rect1"></div>
     <div class="rect2"></div>
     <div class="rect3"></div>
     <div class="rect4"></div>
+    <div class="rect5"></div>
   </div>
 </div>
