Add spinner to index.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-xunk-spinner *ngIf="!initialized"></app-xunk-spinner>
+
 <ng-container *ngIf="initialized">
 
 <!-- Swipe area (only for mobile) -->
