--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,63 +2,62 @@
 
 <ng-container *ngIf="initialized">
 
+<mat-toolbar class="example-toolbar" color="primary">
+    <button mat-icon-button
+            *ngIf="mobileQuery.matches"
+            (click)="toggleSidebar()"
+            [style.display]="getState(o)==='base' ? 'inline' : 'none'">
+        <mat-icon>menu</mat-icon>
+    </button>
+    <button mat-icon-button
+            *ngIf="mobileQuery.matches"
+            [style.display]="getState(o)==='overlay' ? 'inline' : 'none'"
+            (click)="dataService.navigateBack();">
+        <mat-icon>arrow_back</mat-icon>
+    </button>
+
+    <h1 class="example-app-name">
+        {{ this.titleService.getTitle() }}
+    </h1>
+
+    <div class="fill-space"></div>
+    <button mat-button
+            (click)="login()"
+            *ngIf="!this.dataService.loggedIn">
+        Log In
+    </button>
+
+    <button mat-button
+            (click)="this.dataService.Logout()"
+            *ngIf="this.dataService.loggedIn">
+        Log Out
+    </button>
+</mat-toolbar>
+
+<ngx-flyout [(open)]="openFlyout"
+            position="left"
+            [showCloseButton]="false"
+            [showBackdrop]="mobileQuery.matches"
+            [hideOnBackdropClick]="mobileQuery.matches"
+            [flyoutClasses]="getFlyoutClasses()"
+            [backdropClasses]="['flyout-backdrop']">
+    <mat-nav-list>
+        <app-navmenu (click)="closeSidebarMobile()"
+            (swipeleft)="closeSidebarMobile()">
+        </app-navmenu>
+    </mat-nav-list>
+</ngx-flyout>
+
+<div id="router-out" (scroll)="onScroll($event)">
+    <div id="top-gap"></div>
+    <router-outlet #o="outlet"></router-outlet>
+</div>
+
 <!-- Swipe area (only for mobile) -->
 <div #swipeArea id="swipe-right-area"
      *ngIf="mobileQuery.matches"
-     (click)="drawer.toggle()"
-     (swiperight)="drawer.toggle()">
+     (click)="toggleSidebar()"
+     (swiperight)="toggleSidebar()">
 </div>
-
-<mat-sidenav-container class="sidenav-container" fullscreen>
-    <mat-sidenav
-        #drawer
-        class="sidenav"
-        fixedInViewport="true"
-        [mode]="(mobileQuery.matches) ? 'over' : 'side'"
-        [opened]="!mobileQuery.matches">
-        <mat-nav-list>
-            <app-navmenu (click)="closeSidebarMobile(drawer)"
-                         (swipeleft)="closeSidebarMobile(drawer)">
-            </app-navmenu>
-        </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content class="image-background sidenav-content">
-        <mat-toolbar class="example-toolbar" color="primary">
-            <button mat-icon-button
-                    *ngIf="mobileQuery.matches"
-                    (click)="drawer.toggle()"
-                    [style.display]="getState(o)==='base' ? 'inline' : 'none'">
-                <mat-icon>menu</mat-icon>
-            </button>
-            <button mat-icon-button
-                    *ngIf="mobileQuery.matches"
-                    [style.display]="getState(o)==='overlay' ? 'inline' : 'none'"
-                    (click)="dataService.navigateBack();">
-                <mat-icon>arrow_back</mat-icon>
-            </button>
-
-            <h1 class="example-app-name">
-                {{ this.titleService.getTitle() }}
-            </h1>
-
-            <div class="fill-space"></div>
-            <button mat-button
-                    (click)="login()"
-                    *ngIf="!this.dataService.loggedIn">
-                Log In
-            </button>
-
-            <button mat-button
-                    (click)="this.dataService.Logout()"
-                    *ngIf="this.dataService.loggedIn">
-                Log Out
-            </button>
-        </mat-toolbar>
-
-        <div id="router-out" (scroll)="onScroll($event)">
-            <router-outlet #o="outlet"></router-outlet>
-        </div>
-    </mat-sidenav-content>
-</mat-sidenav-container>
 
 </ng-container>
