Clean up some old stuff

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,7 +54,7 @@
 </div>
 
 <!-- Swipe area (only for mobile) -->
-<div #swipeArea id="swipe-right-area"
+<div id="swipe-right-area"
      *ngIf="mobileQuery.matches"
      (click)="toggleSidebar()"
      (swiperight)="toggleSidebar()">
