Change swipe to pan for closing flyout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
             [backdropClasses]="['flyout-backdrop']">
     <mat-nav-list>
         <app-navmenu (click)="closeSidebarMobile()"
-            (swipeleft)="closeSidebarMobile()">
+            (panleft)="closeSidebarMobile()">
         </app-navmenu>
     </mat-nav-list>
 </ngx-flyout>
