Use variable for primary color in CSS

--- a/src/styles.css
+++ b/src/styles.css
@@ -39,12 +39,12 @@ body, .image-background {
 
 .theme-header {
     width: 100%;
-    background-color: #673AB7;
+    background-color: var(--primary-color);
     margin-bottom: 10px;
 }
 
 .primary-background-color{
-    background-color: #673AB7;
+    background-color: var(--primary-color);
     color: white;
 }
 
