--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -6,7 +6,9 @@
 
     <div class="full-container mat-elevation-z4">
         <xunk-calendar [selectedDate]="selDate"
-                       (change)="dateChanged($event)"></xunk-calendar>
+                       (change)="dateChanged($event)"
+                       [heatmap]="getHeatMap()"
+                       [RGB_HM]="{R: 255, G: 235, B: 59}"></xunk-calendar>
         <mat-chip-list class="mat-chip-list-stacked">
             <mat-chip color="accent" selected="true" id="head-chip">
                 <div>{{ GetCount(selDate) }}</div>
