--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,16 @@ body, .image-background {
     --flyout-top: 0px;
 }
 
+* {
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .flyout {
     z-index: 10000;
     width: 300px;
