Add mat-ripple to some cards

--- a/src/app/body-card/body-card.component.html
+++ b/src/app/body-card/body-card.component.html
@@ -1,9 +1,10 @@
-<mat-card *ngIf="body"
+<mat-card mat-ripple
+          *ngIf="body"
           class="sub-card"
           [routerLink]="['/org', body.str_id]">
   <mat-card-header>
     <img mat-card-avatar
-        [src]="body.image_url" 
+        [src]="body.image_url"
          src-fallback="assets/iitb_logo.svg"
          class="object-cover" />
     <mat-card-title>{{ body.name }}</mat-card-title>
