--- a/src/app/event-card/event-card.component.html
+++ b/src/app/event-card/event-card.component.html
@@ -1,4 +1,7 @@
-<mat-card class="sub-card" *ngIf="event" [routerLink]="overrideClick ? null : ['/event', event.str_id]">
+<mat-card mat-ripple
+          class="sub-card"
+          *ngIf="event"
+          [routerLink]="overrideClick ? null : ['/event', event.str_id]">
   <mat-card-header>
     <img mat-card-avatar
          [src]="event.image_url"
