--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -5,7 +5,7 @@
     [event]="selectedEvent">
 
     <div class="events-list">
-        <mat-card class="head-card" (click)=OpenEvent(events[0])>
+        <mat-card mat-ripple class="head-card" (click)=OpenEvent(events[0])>
             <img mat-card-image [src]="events[0].image_url" alt="">
             <div> {{ events[0].name }} </div>
             <span class="subhead">{{ dataService.GetDate(events[0].start_time) }} | {{ events[0].venues_str }}</span>
