--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -26,7 +26,7 @@
             <i class="fas fa-globe fa-lg"></i>
           </a>
           <button mat-icon-button
-                 (click)="shareShowing = !shareShowing">
+                 (click)="share()">
               <mat-icon>share</mat-icon>
           </button>
         </div>
