Use table for reactions (fix for Safari)

--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -8,6 +8,10 @@
     background-color: var(--primary-color);
 }
 
+td.count {
+    text-align: center;
+}
+
 .react-count {
-    margin-top: -10px;
+    margin-top: -8px;
 }
